apps/media/romm/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: romm-mariadb
  namespace: media
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: romm
  ports:
    - name: mariadb
      port: 3306
      targetPort: mariadb
