apps/media/romm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: romm
  namespace: media
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - romm.worm.run
  rules:
    - host: romm.worm.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: romm
                port:
                  name: http
